...
    fontSize: 16,
    fontWeight: 'bold',
  },
  darkThemeText: {
    color: '#fff',
  },
  addButton: {
    backgroundColor: '#007bff',
    paddingVertical: 10,
    paddingHorizontal: 20,
    borderRadius: 5,
  },
  addButtonText: {
...
